# zero

./: .env.example  .gitignore  CLAUDE.md  KEY_FILES_PIPELINE.md  OPTIMIZATIONS.md  PHASE1_COMPLETE.md  PHASE8_TESTING.md  PHASE_2_COMPLETE.md  PHASE_2_QUICKSTART.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  RESPONSE_DELAY_INVESTIGATION.md  ROADMAP.md  SETUP.md  TESTING_GUIDE.md  TESTING_PHASE7.md  TESTING_PHASE_4.md  demo_phase8.py  demo_showcase.py  demo_small_talk.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_audio_components.py  test_audio_recording.py  test_deepgram_streaming.py  test_phase2_demo.py  test_small_talk_basic.py  test_weather_demo.py  try_zero.py
config/: config.example.yaml  config.yaml
docs/: PHASE_3_COMPLETION.md
scripts/: test_performance.py
src/audio/: audio_io.py  stt.py  tts.py  wake_word.py
src/brain/: async_intent.py  context.py  entities.py  intent.py  llm.py
src/core/: config.py  engine.py  logger.py  profiler.py  response_cache.py  state.py
src/skills/: __init__.py  app_control_skill.py  base_skill.py  search_skill.py  skill_manager.py  small_talk_skill.py  timer_skill.py  weather_skill.py
src/ui/: cli.py  tray.py
tests/: test_app_control_skill.py  test_audio.py  test_brain.py  test_config.py  test_integration.py  test_logger.py  test_skills.py  test_small_talk_skill.py  test_state.py  test_timer_skill.py  test_ui.py  test_weather_skill.py
