[project]
name = "zero-assistant"
version = "1.0.0"
description = "ZERO - Intelligent Voice Assistant inspired by J.A.R.V.I.S."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ZERO Team" }
]
keywords = ["voice-assistant", "ai", "jarvis", "speech-recognition", "natural-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Audio - Wake Word Detection
    "pvporcupine==3.0.5",
    # Audio - Speech-to-Text (STT)
    "deepgram-sdk==3.2.0",
    # Audio - Text-to-Speech (TTS)
    "TTS==0.22.0",
    # Audio - I/O (sounddevice preferred, more reliable on macOS)
    "sounddevice==0.4.6",
    "soundfile==0.12.1",
    "numpy>=1.20.0",
    "pydub==0.25.1",
    # Natural Language Understanding (NLU)
    "spacy==3.7.2",
    "openai>=1.12.0",
    "dateparser>=1.1.0,<1.2.0",
    # Skills - Weather
    "requests==2.31.0",
    "pyowm==3.3.0",
    # Skills - App Control
    "psutil==5.9.6",
    "pywin32==306; sys_platform == 'win32'",
    "pyobjc-framework-Cocoa==10.1; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices==10.1; sys_platform == 'darwin'",
    # Skills - Timer
    "pygame==2.5.2",
    # Configuration & Utilities
    "PyYAML==6.0.1",
    "python-dotenv==1.0.0",
    # Frontend - CLI
    "rich==13.7.0",
    "questionary==2.0.1",
    # Frontend - System Tray
    "pystray==0.19.5",
    "Pillow==10.2.0",
    # Frontend - Notifications
    "plyer==2.1.0",
    "en-core-web-sm",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",

    # Code quality
    "black==23.12.0",
    "pylint==3.0.3",
    "mypy==1.8.0",
    "ruff==0.1.9",
]

packaging = [
    # Standalone executables
    "pyinstaller==6.3.0",
]

[project.scripts]
zero = "main:main"

[project.urls]
Homepage = "https://github.com/inovaitive/zero"
Documentation = "https://github.com/inovaitive/zero/blob/main/README.md"
Repository = "https://github.com/inovaitive/zero"
Issues = "https://github.com/inovaitive/zero/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/**/*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (skip with -m 'not slow')",
    "audio: Tests requiring audio hardware",
    "api: Tests requiring API keys",
    "gui: Tests requiring GUI",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=7.4.3",
]
